; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_tio.c_Gi_HW_Arm_Select_Mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_tio.c_Gi_HW_Arm_Select_Mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Gi_M_Series_HW_Arm_Select_Mask = common dso_local global i32 0, align 4
@Gi_660x_HW_Arm_Select_Mask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @Gi_HW_Arm_Select_Mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Gi_HW_Arm_Select_Mask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %10 [
    i32 129, label %5
    i32 128, label %6
    i32 130, label %8
  ]

5:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @Gi_M_Series_HW_Arm_Select_Mask, align 4
  store i32 %7, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  %9 = load i32, i32* @Gi_660x_HW_Arm_Select_Mask, align 4
  store i32 %9, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  %11 = call i32 (...) @BUG()
  br label %12

12:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %8, %6, %5
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
